[package]
authors = ["Oliver Cooper <oliver.cooper@me.com>"]
edition = "2021"
name = "mqtt-garage"
version = "0.1.0"

[workspace]
members = ["lib/config"]

[dependencies]
config = {path = "lib/config"}
log = {version = "0.4", default-features = false, features = ["esp_idf_log"]}
serde_json = "1"
thiserror = "1.0"

# ESP-IDF
esp-idf-hal = "0.43"
esp-idf-svc = "0.48"
esp-idf-sys = {version = "0.34", features = ["binstart"]}

[build-dependencies]
config = {path = "lib/config", features = ["serde"]}
toml = "0.8"

[profile.release]
opt-level = "s"
