[package]
authors = ["Oliver Cooper <oliver.cooper@me.com>"]
edition = "2024"
name = "mqtt-garage"
version = "2.0.0"

[workspace]
members = ["lib/config"]

[dependencies]
config = {path = "lib/config"}
log = {version = "0.4", default-features = false}
serde = {version = "1.0", features = ["derive"]}
serde-json-core = "0.6"
thiserror = "1.0"

embedded-svc = "0.28.1"
esp-idf-svc = {version = "0.51", features = ["embassy-time-driver", "embassy-sync"]}

# --- Optional Embassy Integration ---
# esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

# If you enable embassy-time-driver, you MUST also add one of:

# a) Standalone Embassy libs ( embassy-time, embassy-sync etc) with a foreign async runtime:
# embassy-time = { version = "0.4.0", features = ["generic-queue-8"] } # NOTE: any generic-queue variant will work

# b) With embassy-executor:
embassy-executor = {version = "0.8", features = ["executor-thread", "arch-std"]}
embassy-futures = "0.1.1"
embassy-sync = "0.7"
embassy-time = {version = "0.4", features = ["generic-queue-8"]}
ws2812-esp32-rmt-driver = {version = "0.12.0", features = ["smart-leds-trait"]}
smart-leds = "0.4.0"

# NOTE: if you use embassy-time with embassy-executor you don't need the generic-queue-8 feature

# --- Temporary workaround for embassy-executor < 0.8 ---
# esp-idf-svc = { version = "0.51", features = ["embassy-time-driver", "embassy-sync"] }
# critical-section = { version = "1.1", features = ["std"], default-features = false }

[build-dependencies]
config = {path = "lib/config"}
embuild = "0.33"
toml = "0.9.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
